# react-native-safe-area-context

./: README.md  package-lock.json  package.json  react-native-safe-area-context-4.7.4-0.0.1.tgz  tsconfig.json
harmony/: safe_area.har
harmony/safe_area/: Index.ets  LICENSE  NOTICE  README.OpenSource  build-profile.json5  index.ets  oh-package.json5  ts.ts
harmony/safe_area/src/main/: module.json5
harmony/safe_area/src/main/cpp/: CMakeLists.txt  ComponentDescriptors.h  Props.cpp  Props.h  RNCSafeAreaContextTurbomodule.cpp  RNCSafeAreaContextTurbomodule.h  RNCSafeAreaProviderEventEmitters.cpp  RNCSafeAreaProviderEventEmitters.h  RNCSafeAreaProviderJSIBinder.h  RNCSafeAreaProviderNapiBinder.h  RNCSafeAreaViewJSIBinder.h  RNCSafeAreaViewNapiBinder.h  RNCState.h  SafeAreaBeanData.h  SafeAreaColumnNode.cpp  SafeAreaColumnNode.h  SafeAreaEventEmitRequestHandler.h  SafeAreaProviderComponentInstance.cpp  SafeAreaProviderComponentInstance.h  SafeAreaStackNode.cpp  SafeAreaStackNode.h  SafeAreaViewComponentInstance.cpp  SafeAreaViewComponentInstance.h  SafeAreaViewPackage.h  SafeAreaViewStackNode.cpp  SafeAreaViewStackNode.h  ShadowNodes.cpp  ShadowNodes.h  TurboModuleRequest.cpp  TurboModuleRequest.h
harmony/safe_area/src/main/ets/: Logger.ts  SafeAreaManager.ets  SafeAreaProvider.ets  SafeAreaProviderModifier.ets  SafeAreaView.ets  SafeAreaViewModifier.ets  SafeAreaViewPackage.ts  SafeViewTurboModule.ts  (+2 more)
scripts/: deploy.js  update-version.js
src/: SafeAreaView.js  SafeAreaView.tsx  index.js  index.tsx
src/specs/: NativeSafeAreaView.js  NativeSafeAreaView.ts
(+1 files in other folders)
